--- a/signin.html
+++ b/signin.html
@@ -33,11 +33,12 @@
     </script>
 </head>
 <body>
+<center>
 <form name="users">
 <table>
 <tr>
 <td colspan="2" style="text-align: center">
-    <b>Signin </b>
+    <b>User Login </b>
 </td>
 </tr>
 <tr>
@@ -51,15 +52,15 @@
     <input name="t2" type="password"/></td>
 </tr>
 <tr>
-<td colspan="2" style="text-align: center">
-    <input type="button" value="Login" onclick="signin()" /></td>
+<td colspan="2" style="text-align: right">
+<a class="button_red" href="signup.html"> Signup</a>
+    <input type="button" value="Login" class="button_green" onclick="signin()" />
+	
+	</td>
 </tr>
-<tr>
-<td colspan="2" style="text-align: center">
-<a href="signup.html"> Signup</a>
-</td>
-</tr>
+
 </table>
 </form>
+</center>
 </body>
 </html>
